# DE-Lab-Tutorial

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
results/join_benchmark/: git_sha  run_arguments
results/join_benchmark/AMD1/: join_benchmark.json  run.benchmark
results/join_benchmark/INTEL2/: join_benchmark.json  run.benchmark
results/join_benchmark5/: git_sha  run_arguments
results/join_benchmark5/AMD1/: join_benchmark.json  run.benchmark
results/join_benchmark5/INTEL2/: join_benchmark.json  run.benchmark
results/join_benchmark_different_build_sizes/: git_sha  run_arguments
results/join_benchmark_different_build_sizes/AMD1/: join_benchmark.json  run.benchmark
results/join_benchmark_different_build_sizes/INTEL2/: join_benchmark.json  run.benchmark
results/test/: git_sha  run_arguments
results/test/AMD1/: run.benchmark
results/test/AMD2/: run.benchmark
results/test/ARM1/: run.benchmark
results/test/ARM2/: run.benchmark
results/test/INTEL1/: run.benchmark
results/test/INTEL2/: run.benchmark
results/test/INTEL3/: run.benchmark
scripts/: config.sh  delab_benchmark_pipeline.sh  delab_run_benchmark.sh  format.sh  lint.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  join_benchmark.cpp
src/benchmark/utils/: CMakeLists.txt  benchmark_runner.cpp  benchmark_runner.hpp  column_generator.hpp  perf_wrapper.cpp  perf_wrapper.hpp  runtime_config.cpp  runtime_config.hpp
src/lib/: CMakeLists.txt  hash_join.cpp  hash_join.hpp  join.hpp  nested_loop_join.cpp  nested_loop_join.hpp
src/lib/utils/: singleton.hpp
visualization/: helper.py  join_benchmark.py
